--- a/src/app/Components/marketing/marketing.component.html
+++ b/src/app/Components/marketing/marketing.component.html
@@ -24,7 +24,7 @@
                         <li>
                             {{"marketing.list" | translate}}
                         </li>
-                        <li>
+                        <li class="mt-5">
                             {{"marketing.list-1" | translate}}
                         </li>
                         <li>
@@ -36,13 +36,16 @@
                         <li>
                             {{"marketing.list-4" | translate}}
                         </li>
+                        <li>
+                            {{"marketing.list-5" | translate}}
+                        </li>
                     </ul>
                     
                 </article>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 mt-10">
                 <article>
-                    <img src="../../../assets/img/markExp.svg" class="img1 pequeño" alt="marketing exponencial">    
+                    <img src="../../../assets/img/markExp.svg" class="img1 pequeño mt-14" alt="marketing exponencial">    
                 </article>
             </div>   
         </div>
@@ -58,7 +61,7 @@
             <div *ngIf="estado">
                 <a  class="button-form centrar"> 
                     <span class="text">
-                        Contáctanos
+                        Comunícate Ahora.
                     </span>
                 </a>
             </div>
