--- a/src/app/Components/arte/arte.component.html
+++ b/src/app/Components/arte/arte.component.html
@@ -1,50 +1,84 @@
+<!-- Inicio container general -->
 <div class="container-fluid mt-16 mb-16 fondo">
+    <!-- Nav metido en container -->
     <app-nav></app-nav>
+    <!-- h1 -->
     <h1 class="ml-9 mt-16">
         {{"digital-art.title" | translate}}    
     </h1>
-    <div class="row">
-        <div class="col-md-4 mt-16">
-            <article>
-                <p class="align"> 
-                    {{"digital-art.paragraph.0" | translate}}
-                </p>    
-            </article>
+    <!-- Container contenido página -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 mt-16">
+                <article>
+                    <p class="align"> 
+                        {{"digital-art.paragraph" | translate}}
+                    </p>    
+                </article>
+            </div>
+            <div class="col-md-6 mt-2">
+                <article>
+                    <img src="../../../assets/img/Recurso 11.png" class="img1 ml-12" alt="Arte Digital">   
+                </article>
+            </div>   
         </div>
-        <div class="col-md-4 mt-16">
-            <article>
-                <p> 
-                    {{"digital-art.paragraph.1" | translate}}
-                </p>    
-            </article>
-        </div>
-        <div class="col-md-4 mt-12">
-            <article>
-                <img src="../../../assets/img/Recurso 11.png" class="img1 pequeño" alt="Arte Digital">   
-            </article>
-        </div>   
     </div>
-</div>
-<app-footer></app-footer>
+    <!-- Container Formulario -->
 
-<!-- 
-                <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
-                <p class=" pb-6 pt-10"> ¿Qué es el Arte Digital? </p>
-                <p class=" pb-6 pt-10">Los NFTs son una forma de darle valor agregado al arte en forma digital, funciona agregando una firma única e indeleble al archivo digital donde se encuentra la obra dentro de una red de blockchain, este proceso genera un token que tiene un carácter no fungible (el NFT).</p>
-                <p class=" pb-6 pt-10">Si bien las obras de arte digital con NFT se comercializan a partir de criptomonedas, pueden ser convertidas a una moneda como FIAT, como dólares, euros, etc.</p>
-                <p class=" pb-6 pt-10">Coaching NFT</p>
-                <p class=" pb-6 pt-10">La variedad de arte que se puede producir en ambientes digitales es fascinante, desde arte generativo, ilustración digital, arte glitch / gif, collage de video, arte con IA, obras de arte realizadas en realidad virtual, etc. Nosotros  te ofrecemos un espacio para potenciar tus habilidades, apoyándote en la experimentación. </p>
-                <p class=" pb-6 pt-10">Ofrecemos asesoría personalizada en los siguientes temas: </p>
-                <p class=" pb-6 pt-10">El mercado del coleccionismo y en qué se diferencia del mercado     de obras en masa. </p>
-                <p class=" pb-6 pt-10">Por qué le debe interesar a un artista la blockchain. </p>
-                <p class=" pb-6 pt-10">Qué puede ser y qué NO puede ser un NFT </p>
-                <p class=" pb-6 pt-10">Derechos de autor ¿Qué pasa con los derechos de mi obra con los NFT? </p>
-                <p class=" pb-6 pt-10">¿Qué pasa si piratean mi obra? </p>
-                <p class=" pb-6 pt-10">Creación de perfil en una plataforma de NFT </p>
-                <p class=" pb-6 pt-10">Creación de billeteras digitales </p>
-                <p class=" pb-6 pt-10">Producción de NFTs desde cero. </p>
-                <p class=" pb-6 pt-10">Cómo mejorar las ventas de tus NFT. </p>
-                <p class=" pb-6 pt-10">Cómo convertir el dinero que ganas por la venta del NFT a dólares o moneda local.</p>
+  <div class="container mt-16 mb-16">
+
+    <!-- Formulario con efecto ngIF, se oculta el botòn y aparece el formulario -->
+    
+        <div class="container" (click)="estado=!estado">
+            <div *ngIf="estado">
+                <a  class="button-form centrar"> 
+                    <span class="text">
+                        Comunícate Ahora.
+                    </span>
+                </a>
             </div>
         </div>
-    </div> -->
+
+        <!-- De aquí para abajo aparece la nueva parte, que se activa con el evento-->
+    
+        <div *ngIf="!estado" class="mt-16 mb-16">
+            <form class="p-8 formulario">
+                <div class="form-group">
+                    <label for="nombre">
+                        Nombre
+                    </label>
+                    <input type="text" class="form-control mt-5 tamaño" id="nombre" placeholder="Nombre" value="Tu Nombre" required>
+                </div>
+                <div class="form-group mt-5">
+                    <label for="apellido">
+                        Apellido
+                    </label>
+                    <input type="text" class="form-control mt-5 tamaño" id="apellido" placeholder="Apellido" value="Tu Apellido" required>
+                </div>
+                <div class="form-group mt-5">
+                    <label for="email">
+                        Email
+                    </label>
+                    <input type="email" class="form-control mt-5 tamaño" id="email" aria-describedby="emailHelp" placeholder="Ingresa tu correo electrónico">
+                    <small id="emailHelp" class="form-text text-muted">Es importante que digites correctamente tu corrreo <br/> porque te vamos a responder al mismo.</small>
+                </div>
+                <div class="form-group mt-5">
+                    <label for="consulta">
+                        Área de Consulta
+                    </label>
+                    <textarea class="form-control mt-5 tamaño" aria-describedby="contentHelp" id="consulta" rows="5"></textarea>
+                    <small id="contentHelp" class="form-text text-muted">Por favor, escribe tu consulta, y sé lo más claro posible.</small>
+                </div>
+                <div class="form-check mt-5">
+                    <input class="form-check-input" type="checkbox" value="" id="check" required>
+                    <label class="form-check-label" for="check">
+                        Aceptas Nuestros Términos y Condiciones.
+                    </label>
+                </div>
+                <button class="btn btn-primary mt-5 ml-16" type="submit">Enviar Formulario</button>
+            </form>    
+        </div>  
+    </div>
+    <!-- Fin div Formulario -->
+</div>
+<app-footer></app-footer>
