--- a/src/styles.css
+++ b/src/styles.css
@@ -76,12 +76,13 @@ body {
 }
 
 .align {
-    margin-left: 4rem;
+    margin-left: 1rem;
 }
 
 .centrar {
     position: relative;
-    left: 20rem;
+    top:4rem;
+    left: 16rem;    
 }
 
 /* Botón Formulario */
@@ -98,7 +99,7 @@ body {
     font-size: 20px;
     justify-content: center;
     line-height: 1em;
-    width: 14rem;
+    width: 19rem;
     padding: 3px;
     text-decoration: none;
     user-select: none;
