AlexQuijote Commit 29. Estoy trabajando en el carousel hecho con bootstrap, falta mejorar el diseño, tamaño de imágenes, y los botones de computadora.

--- a/src/app/Components/experiencia/experiencia.component.html
+++ b/src/app/Components/experiencia/experiencia.component.html
@@ -10,64 +10,29 @@
         <div class="col-md-4">
           <!-- Carousel -->
           <div id="ketanolab" class="carousel slide" data-bs-ride="carousel">
-            <!-- Indicators/dots -->
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#ketanolab" data-bs-slide-to="0" class="active"></button>
-              <button type="button" data-bs-target="#ketanolab" data-bs-slide-to="1"></button>
-              <button type="button" data-bs-target="#ketanolab" data-bs-slide-to="2"></button>
-              <button type="button" data-bs-target="#ketanolab" data-bs-slide-to="3"></button>
-              <button type="button" data-bs-target="#ketanolab" data-bs-slide-to="4"></button>
-              <button type="button" data-bs-target="#ketanolab" data-bs-slide-to="5"></button>
-              <button type="button" data-bs-target="#ketanolab" data-bs-slide-to="6"></button>
-              <button type="button" data-bs-target="#ketanolab" data-bs-slide-to="7"></button>
-            </div>
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
               <div class="carousel-item active tamaño">
                 <h3>Banco Bisa</h3>
-                <a href="https://www.bisa.com/" target="_blank">https://www.bisa.com/</a>
                 <img src="assets/img/bancobisa.svg" alt="Los Angeles" class="d-block">
+                <a href="https://www.bisa.com/" target="_blank">https://www.bisa.com/</a>
               </div>
               <div class="carousel-item tamaño">
                 <h3>Boliviana Ciacruz</h3>
-                <a href="https://www.lbc.bo/" target="_blank">https://www.lbc.bo/</a>
-                <img src="assets/img/boliviana.svg" alt="Chicago" class="d-block"> 
+                <img src="assets/img/boliviana.svg" alt="Chicago" class="d-block">
+                <a href="https://www.lbc.bo/" target="_blank">https://www.lbc.bo/</a> 
               </div>
               <div class="carousel-item tamaño">
                 <h3>Cacho de Cacho</h3>
-                <a href="https://play.google.com/store/apps/details?id=viny.soltux" target="_blank">https://play.google.com/store/apps/details?id=viny.soltux</a>
-                <img src="assets/img/cacho.svg" alt="New York" class="d-block"> 
-              </div>
-              <div class="carousel-item tamaño">
-                <h3>Certix</h3>
-                <a href="https://certix.me" target="_blank">https://certix.me</a>
-                <img src="assets/img/certix.png" alt="New York" class="d-block">
-              </div>
-              <div class="carousel-item tamaño">
-                <h3>Ecotambo</h3>
-                <img src="assets/img/cliente4.svg" alt="New York" class="d-block">
-              </div>
-              <div class="carousel-item tamaño">
-                <h3>Tupac Katari</h3>
-                <p>Tupac Katari</p>
-                <img src="assets/img/cliente5.svg" alt="New York" class="d-block">
-              </div>
-              <div class="carousel-item tamaño">
-                <h3>NuSimi</h3>
-                <a href="https://play.google.com/store/apps/details?id=com.ketanolab.nusimi" target="_blank">https://play.google.com/store/apps/details?id=com.ketanolab.nusimi</a>
-                <img src="assets/img/nusimi.svg" alt="New York" class="d-block">
-              </div>
-              <div class="carousel-item tamañosanfrancisco">
-                <h3>Museo San Francisco</h3>
-                <p>Museo San Francisco</p>
-                <img src="assets/img/sanfrancisco.jpg" alt="New York" class="d-block" style="width:100%">
+                <img src="assets/img/cacho.svg" alt="New York" class="d-block">
+                <a href="https://play.google.com/store/apps/details?id=viny.soltux" target="_blank">https://play.google.com/store/apps/details?id=viny.soltux</a> 
               </div>
             </div>              
               <!-- Left and right controls/icons -->
-            <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#ketanolab" data-bs-slide="prev">
               <span class="carousel-control-prev-icon"></span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#ketanolab" data-bs-slide="next">
               <span class="carousel-control-next-icon"></span>
             </button>
           </div>
@@ -76,38 +41,12 @@
         <div class="col-md-4">
           <!-- Carousel -->
           <div id="ketano" class="carousel slide" data-bs-ride="carousel">
-            <!-- Indicators/dots -->
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#ketano" data-bs-slide-to="0" class="active"></button>
-              <button type="button" data-bs-target="#ketano" data-bs-slide-to="1"></button>
-              <button type="button" data-bs-target="#ketano" data-bs-slide-to="2"></button>
-              <button type="button" data-bs-target="#ketano" data-bs-slide-to="3"></button>
-              <button type="button" data-bs-target="#ketano" data-bs-slide-to="4"></button>
-              <button type="button" data-bs-target="#ketano" data-bs-slide-to="5"></button>
-              <button type="button" data-bs-target="#ketano" data-bs-slide-to="6"></button>
-              <button type="button" data-bs-target="#ketano" data-bs-slide-to="7"></button>
-            </div>
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
               <div class="carousel-item active tamaño">
-                <h3>Banco Bisa</h3>
-                <a href="https://www.bisa.com/" target="_blank">https://www.bisa.com/</a>
-                <img src="assets/img/bancobisa.svg" alt="Los Angeles" class="d-block">
-              </div>
-              <div class="carousel-item tamaño">
-                <h3>Boliviana Ciacruz</h3>
-                <a href="https://www.lbc.bo/" target="_blank">https://www.lbc.bo/</a>
-                <img src="assets/img/boliviana.svg" alt="Chicago" class="d-block"> 
-              </div>
-              <div class="carousel-item tamaño">
-                <h3>Cacho de Cacho</h3>
-                <a href="https://play.google.com/store/apps/details?id=viny.soltux" target="_blank">https://play.google.com/store/apps/details?id=viny.soltux</a>
-                <img src="assets/img/cacho.svg" alt="New York" class="d-block"> 
-              </div>
-              <div class="carousel-item tamaño">
                 <h3>Certix</h3>
-                <a href="https://certix.me" target="_blank">https://certix.me</a>
                 <img src="assets/img/certix.png" alt="New York" class="d-block">
+                <a href="https://certix.me" target="_blank">https://certix.me</a>
               </div>
               <div class="carousel-item tamaño">
                 <h3>Ecotambo</h3>
@@ -115,90 +54,39 @@
               </div>
               <div class="carousel-item tamaño">
                 <h3>Tupac Katari</h3>
-                <p>Tupac Katari</p>
                 <img src="assets/img/cliente5.svg" alt="New York" class="d-block">
-              </div>
-              <div class="carousel-item tamaño">
-                <h3>NuSimi</h3>
-                <a href="https://play.google.com/store/apps/details?id=com.ketanolab.nusimi" target="_blank">https://play.google.com/store/apps/details?id=com.ketanolab.nusimi</a>
-                <img src="assets/img/nusimi.svg" alt="New York" class="d-block">
-              </div>
-              <div class="carousel-item tamañosanfrancisco">
-                <h3>Museo San Francisco</h3>
-                <p>Museo San Francisco</p>
-                <img src="assets/img/sanfrancisco.jpg" alt="New York" class="d-block" style="width:100%">
               </div>
             </div>              
               <!-- Left and right controls/icons -->
-            <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#ketano" data-bs-slide="prev">
               <span class="carousel-control-prev-icon"></span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#ketano" data-bs-slide="next">
               <span class="carousel-control-next-icon"></span>
             </button>
           </div>
         </div>
-        <div class="col-md-12">
+        <!-- Inicio de columna 3 de fila 1 de carousel -->
+        <div class="col-md-4">
           <!-- Carousel -->
-          <div id="demo" class="carousel slide" data-bs-ride="carousel">
-            <!-- Indicators/dots -->
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-              <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-              <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-              <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
-              <button type="button" data-bs-target="#demo" data-bs-slide-to="4"></button>
-              <button type="button" data-bs-target="#demo" data-bs-slide-to="5"></button>
-              <button type="button" data-bs-target="#demo" data-bs-slide-to="6"></button>
-              <button type="button" data-bs-target="#demo" data-bs-slide-to="7"></button>
-            </div>
+          <div id="keta" class="carousel slide" data-bs-ride="carousel">
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
               <div class="carousel-item active tamaño">
-                <h3>Banco Bisa</h3>
-                <a href="https://www.bisa.com/" target="_blank">https://www.bisa.com/</a>
-                <img src="assets/img/bancobisa.svg" alt="Los Angeles" class="d-block">
-              </div>
-              <div class="carousel-item tamaño">
-                <h3>Boliviana Ciacruz</h3>
-                <a href="https://www.lbc.bo/" target="_blank">https://www.lbc.bo/</a>
-                <img src="assets/img/boliviana.svg" alt="Chicago" class="d-block"> 
-              </div>
-              <div class="carousel-item tamaño">
-                <h3>Cacho de Cacho</h3>
-                <a href="https://play.google.com/store/apps/details?id=viny.soltux" target="_blank">https://play.google.com/store/apps/details?id=viny.soltux</a>
-                <img src="assets/img/cacho.svg" alt="New York" class="d-block"> 
-              </div>
-              <div class="carousel-item tamaño">
-                <h3>Certix</h3>
-                <a href="https://certix.me" target="_blank">https://certix.me</a>
-                <img src="assets/img/certix.png" alt="New York" class="d-block">
-              </div>
-              <div class="carousel-item tamaño">
-                <h3>Ecotambo</h3>
-                <img src="assets/img/cliente4.svg" alt="New York" class="d-block">
-              </div>
-              <div class="carousel-item tamaño">
-                <h3>Tupac Katari</h3>
-                <p>Tupac Katari</p>
-                <img src="assets/img/cliente5.svg" alt="New York" class="d-block">
-              </div>
-              <div class="carousel-item tamaño">
                 <h3>NuSimi</h3>
-                <a href="https://play.google.com/store/apps/details?id=com.ketanolab.nusimi" target="_blank">https://play.google.com/store/apps/details?id=com.ketanolab.nusimi</a>
                 <img src="assets/img/nusimi.svg" alt="New York" class="d-block">
+                <a href="https://play.google.com/store/apps/details?id=com.ketanolab.nusimi" target="_blank">https://play.google.com/store/apps/details?id=com.ketanolab.nusimi</a>
               </div>
               <div class="carousel-item tamañosanfrancisco">
                 <h3>Museo San Francisco</h3>
-                <p>Museo San Francisco</p>
                 <img src="assets/img/sanfrancisco.jpg" alt="New York" class="d-block" style="width:100%">
               </div>
             </div>              
               <!-- Left and right controls/icons -->
-            <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#keta" data-bs-slide="prev">
               <span class="carousel-control-prev-icon"></span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#keta" data-bs-slide="next">
               <span class="carousel-control-next-icon"></span>
             </button>
           </div>
