--- a/src/app/Components/experiencia/experiencia.component.html
+++ b/src/app/Components/experiencia/experiencia.component.html
@@ -14,18 +14,15 @@
             <div class="carousel-inner">
               <div class="carousel-item active tamaño">
                 <h3>Banco Bisa</h3>
-                <img src="assets/img/bancobisa.svg" alt="Los Angeles" class="d-block">
-                <a href="https://www.bisa.com/" target="_blank">https://www.bisa.com/</a>
+                <a href="https://www.bisa.com/" target="_blank"><img src="assets/img/bancobisa.svg" alt="Banco Bisa" class="d-block"></a>
               </div>
               <div class="carousel-item tamaño">
                 <h3>Boliviana Ciacruz</h3>
-                <img src="assets/img/boliviana.svg" alt="Chicago" class="d-block">
-                <a href="https://www.lbc.bo/" target="_blank">https://www.lbc.bo/</a> 
+                <a href="https://www.lbc.bo/" target="_blank"><img src="assets/img/boliviana.svg" alt="Boliviana Ciacruz" class="d-block"></a>
               </div>
               <div class="carousel-item tamaño">
                 <h3>Cacho de Cacho</h3>
-                <img src="assets/img/cacho.svg" alt="New York" class="d-block">
-                <a href="https://play.google.com/store/apps/details?id=viny.soltux" target="_blank">https://play.google.com/store/apps/details?id=viny.soltux</a> 
+                <a href="https://play.google.com/store/apps/details?id=viny.soltux" target="_blank"><img src="assets/img/cacho.svg" alt="Cacho de Cacho" class="d-block"></a> 
               </div>
             </div>              
               <!-- Left and right controls/icons -->
@@ -45,16 +42,15 @@
             <div class="carousel-inner">
               <div class="carousel-item active tamaño">
                 <h3>Certix</h3>
-                <img src="assets/img/certix.png" alt="New York" class="d-block">
-                <a href="https://certix.me" target="_blank">https://certix.me</a>
+                <a href="https://certix.me" target="_blank"><img src="assets/img/certix.png" alt="Certix" class="d-block"></a>
               </div>
               <div class="carousel-item tamaño">
                 <h3>Ecotambo</h3>
-                <img src="assets/img/cliente4.svg" alt="New York" class="d-block">
+                <img src="assets/img/cliente4.svg" alt="Ecotambo" class="d-block">
               </div>
               <div class="carousel-item tamaño">
                 <h3>Tupac Katari</h3>
-                <img src="assets/img/cliente5.svg" alt="New York" class="d-block">
+                <img src="assets/img/cliente5.svg" alt="Tupac Katari" class="d-block">
               </div>
             </div>              
               <!-- Left and right controls/icons -->
@@ -74,8 +70,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active tamaño">
                 <h3>NuSimi</h3>
-                <img src="assets/img/nusimi.svg" alt="New York" class="d-block">
-                <a href="https://play.google.com/store/apps/details?id=com.ketanolab.nusimi" target="_blank">https://play.google.com/store/apps/details?id=com.ketanolab.nusimi</a>
+                <a href="https://play.google.com/store/apps/details?id=com.ketanolab.nusimi" target="_blank"><img src="assets/img/nusimi.svg" alt="Nusimi" class="d-block"></a>
               </div>
               <div class="carousel-item tamañosanfrancisco">
                 <h3>Museo San Francisco</h3>
@@ -100,25 +95,25 @@
     <!-- Inicio section div flex -->
     <section class="d-flex justify-content-center" >
       <!-- Inicio 1 logo de flexbox -->
-      <div class="marco-ext-h logo">
+      <div>
         <a href="https://www.derechosdigitales.org/" target="_blank">
           <img src="../../../assets/img/Logo-Derechos-Digitales-01.png" class="efecto"  alt="Derechos Digitales" id="imagen1">
         </a>        
       </div>
       <!-- Inicio de 2 logo de flexbox -->
-      <div class="marco-ext-h logo">
+      <div>
         <a href="https://www.bisa.com/" target="_blank">
           <img src="../../../assets/img/bancobisa.png" class="efecto"  alt="Banco Bisa" id="imagen2">
         </a>        
       </div>
      <!-- Inicio de 3 logo de flexbox -->
-      <div class="marco-ext-h logo">
+      <div>
         <a href="https://www.lbc.bo/" target="_blank">
           <img src="../../../assets/img/lbc-blanco.png" class="efecto"  alt="La Boliviana Ciacruz" id="imagen3">
         </a>        
       </div>
      <!-- Inicio de 4 logo de flexbox -->
-      <div class="marco-ext-h logo d-flex">
+      <div>
         <div class="align-self-center">
           <a href="https://www.facebook.com/CCMSFLP/" target="_blank">
             <img src="../../../assets/img/sanfrancisco.jpg" class="efecto"  alt="San Francisco" id="imagen4">
@@ -126,7 +121,7 @@
         </div>
       </div>        
       <!-- Inicio de 5 logo de flexbox -->
-      <div class="marco-ext-h logo d-flex">
+      <div>
         <div class="align-self-center">
           <a href="https://www.comunicacion.gob.bo/" target="_blank">
             <img src="../../../assets/img/mincom_blanco.png" class="efecto"  alt="Ministerio Comunicación Bolivia" id="imagen5">
