--- a/src/app/Components/marketing/marketing.component.html
+++ b/src/app/Components/marketing/marketing.component.html
@@ -1,9 +1,9 @@
 <!-- Container fluído de la página -->
-<div class="container-fluid mt-16 mb-16 fondo">
+<div class="container-fluid mb-16 fondo">
     <!-- NavBar -->
     <app-nav></app-nav>
     <!-- H1 -->
-    <h1 class="ml-16 mt-16">
+    <h1 class="ml-10 mt-16">
         {{"marketing.title" | translate}}    
     </h1>
 
@@ -22,6 +22,11 @@
                 <article>
                     <ul class="align">
                         <li>
+                            <h2>
+                                {{"ofrecemos.title" | translate}}
+                            </h2>
+                        </li>
+                        <li class="mt-5">
                             {{"marketing.list" | translate}}
                         </li>
                         <li class="mt-5">
@@ -39,6 +44,17 @@
                         <li>
                             {{"marketing.list-5" | translate}}
                         </li>
+                        <li class="centrar_boton mb-16">
+                            <div class="container" (click)="estado=!estado">
+                                <div *ngIf="estado">
+                                    <a  class="button-form centrar"> 
+                                        <span class="text">
+                                            {{"button.contact" | translate}}
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>  
+                        </li>
                     </ul>
                     
                 </article>
@@ -54,58 +70,47 @@
     <!-- Container Formulario -->
     
     <div class="container mt-16 mb-16">
-    
-    <!-- Formulario con efecto ngIF, se oculta el botòn y aparece el formulario -->
-    
-        <div class="container" (click)="estado=!estado">
-            <div *ngIf="estado">
-                <a  class="button-form centrar"> 
-                    <span class="text">
-                        Comunícate Ahora.
-                    </span>
-                </a>
+        <div class="row">
+                <div class="col-md-6">
+                <!-- De aquí para abajo aparece la nueva parte, que se activa con el evento-->
+            
+                <div *ngIf="!estado" class="mt-16 mb-16">
+                    <form class="p-8 formulario">
+                        <div class="form-group">
+                            <label for="nombre">
+                                Nombre
+                            </label>
+                            <input type="text" class="form-control mt-5 tamaño" id="nombre" placeholder="Nombre" value="Tu Nombre" required>  
+                        </div>
+                        <div class="form-group mt-5">
+                            <label for="apellido">
+                                Apellido
+                            </label>
+                            <input type="text" class="form-control mt-5 tamaño" id="apellido" placeholder="Apellido" value="Tu Apellido" required>
+                            </div>
+                        <div class="form-group mt-5">
+                            <label for="email">
+                                Email
+                            </label>
+                            <input type="email" class="form-control mt-5 tamaño" id="email" placeholder="Ingresa tu correo electrónico">
+                        </div>
+                        <div class="form-group mt-5">
+                            <label for="consulta">
+                                Área de Consulta
+                            </label>
+                            <textarea class="form-control mt-5 tamaño" id="consulta" rows="5"></textarea>
+                        </div>
+                        <div class="form-check mt-5">
+                            <input class="form-check-input" type="checkbox" value="" id="check" required>
+                            <label class="form-check-label" for="check">
+                                Aceptas Nuestros Términos y Condiciones.
+                            </label>
+                        </div>
+                        <button class="btn btn-primary mt-5 ml-16" type="submit">Enviar Formulario</button>
+                    </form>    
+                </div>
             </div>
         </div>
-
-        <!-- De aquí para abajo aparece la nueva parte, que se activa con el evento-->
-    
-        <div *ngIf="!estado" class="mt-16 mb-16">
-            <form class="p-8 formulario">
-                <div class="form-group">
-                    <label for="nombre">
-                        Nombre
-                    </label>
-                    <input type="text" class="form-control mt-5 tamaño" id="nombre" placeholder="Nombre" value="Tu Nombre" required>
-                </div>
-                <div class="form-group mt-5">
-                    <label for="apellido">
-                        Apellido
-                    </label>
-                    <input type="text" class="form-control mt-5 tamaño" id="apellido" placeholder="Apellido" value="Tu Apellido" required>
-                </div>
-                <div class="form-group mt-5">
-                    <label for="email">
-                        Email
-                    </label>
-                    <input type="email" class="form-control mt-5 tamaño" id="email" aria-describedby="emailHelp" placeholder="Ingresa tu correo electrónico">
-                    <small id="emailHelp" class="form-text text-muted">Es importante que digites correctamente tu corrreo <br/> porque te vamos a responder al mismo.</small>
-                </div>
-                <div class="form-group mt-5">
-                    <label for="consulta">
-                        Área de Consulta
-                    </label>
-                    <textarea class="form-control mt-5 tamaño" aria-describedby="contentHelp" id="consulta" rows="5"></textarea>
-                    <small id="contentHelp" class="form-text text-muted">Por favor, escribe tu consulta, y sé lo más claro posible.</small>
-                </div>
-                <div class="form-check mt-5">
-                    <input class="form-check-input" type="checkbox" value="" id="check" required>
-                    <label class="form-check-label" for="check">
-                        Aceptas Nuestros Términos y Condiciones.
-                    </label>
-                </div>
-                <button class="btn btn-primary mt-5 ml-16" type="submit">Enviar Formulario</button>
-            </form>    
-        </div>  
     </div>    
-</div>
 <app-footer></app-footer>
+</div>
