--- a/src/app/Components/turismo/turismo.component.html
+++ b/src/app/Components/turismo/turismo.component.html
@@ -18,9 +18,31 @@
             </div>
             <div class="col-md-4 mt-16">
                 <article>
-                    <p> 
-                        {{"sightseeing.paragraph.1" | translate}}
-                    </p>    
+                    <ul>
+                        <li>
+                            <h2>
+                                {{"ofrecemos.title" | translate}}
+                            </h2>
+                        </li>
+                        <li class="mt-5">
+                            {{"sightseeing.paragraph.1" | translate}}
+                        </li>
+                        <li class="centrar_boton">
+
+                        <!-- Formulario con efecto ngIF, se oculta el botòn y aparece el formulario -->
+                        
+                            <div class="container" (click)="estado=!estado">
+                                <div *ngIf="estado">
+                                    <a  class="button-form centrar"> 
+                                        <span class="text">
+                                            {{"button.contact" | translate}}
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                        </li>
+                    </ul>
                 </article>
             </div>
             <div class="col-md-4 mt-16">
@@ -34,20 +56,9 @@
 
   <div class="container mt-16 mb-16">
 
-    <!-- Formulario con efecto ngIF, se oculta el botòn y aparece el formulario -->
-    
-        <div class="container" (click)="estado=!estado">
-            <div *ngIf="estado">
-                <a  class="button-form centrar"> 
-                    <span class="text">
-                        Comunícate Ahora.
-                    </span>
-                </a>
-            </div>
-        </div>
-
         <!-- De aquí para abajo aparece la nueva parte, que se activa con el evento-->
-    
+    <div class="row">
+        <div class="col-md-6">
         <div *ngIf="!estado" class="mt-16 mb-16">
             <form class="p-8 formulario">
                 <div class="form-group">
@@ -66,16 +77,14 @@
                     <label for="email">
                         Email
                     </label>
-                    <input type="email" class="form-control mt-5 tamaño" id="email" aria-describedby="emailHelp" placeholder="Ingresa tu correo electrónico">
-                    <small id="emailHelp" class="form-text text-muted">Es importante que digites correctamente tu corrreo <br/> porque te vamos a responder al mismo.</small>
-                </div>
+                    <input type="email" class="form-control mt-5 tamaño" id="email" placeholder="Ingresa tu correo electrónico">
+                    </div>
                 <div class="form-group mt-5">
                     <label for="consulta">
                         Área de Consulta
                     </label>
-                    <textarea class="form-control mt-5 tamaño" aria-describedby="contentHelp" id="consulta" rows="5"></textarea>
-                    <small id="contentHelp" class="form-text text-muted">Por favor, escribe tu consulta, y sé lo más claro posible.</small>
-                </div>
+                    <textarea class="form-control mt-5 tamaño" id="consulta" rows="5"></textarea>
+                    </div>
                 <div class="form-check mt-5">
                     <input class="form-check-input" type="checkbox" value="" id="check" required>
                     <label class="form-check-label" for="check">
@@ -85,10 +94,12 @@
                 <button class="btn btn-primary mt-5 ml-16" type="submit">Enviar Formulario</button>
             </form>    
         </div>  
+        </div>
+        </div>
     </div>
-    <!-- Fin div Formulario -->
-</div>    
+    <!-- Fin div Formulario -->    
 <app-footer></app-footer>
+</div>
 
 
 
