AlexQuijote Commit 32. Mejora en la página de nosotros, montaje en fotos de Samantha y Melania.

--- a/src/app/Components/nosotros/nosotros.component.css
+++ b/src/app/Components/nosotros/nosotros.component.css
@@ -73,13 +73,20 @@
   font-family: "orbitron";
 }
 .card-text {
-  font-size: 0.9em;
+  font-size: 1rem;
   letter-spacing: 1px;
   opacity: 0.9;
 }
 
 .card-text-milenka {
-  font-size: 0.6em;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  opacity: 0.9;
+}
+
+
+.card-text-chacon {
+  font-size: 0.6rem;
   letter-spacing: 1px;
   opacity: 0.9;
 }
