--- a/src/app/Components/nosotros/nosotros.component.html
+++ b/src/app/Components/nosotros/nosotros.component.html
@@ -1,79 +1,85 @@
+<!-- Inicio container general -->
 <div class="container-nosotros">
+  <!-- nav metido en container -->
   <app-nav></app-nav>
-  <!-- inicio container -->
-  <div class="container"> 
-    <div class="quienes-somos">
-      <h1 class="text-center mt-16 mb-5">Sobre Ketanolab</h1>
-      <p class="text-justify">{{"we.paragraph" | translate}}</p>
+  <!-- inicio container quiénes somos-->
+  <div class="quienes-somos">
+    <!-- h1 quiénes somos -->
+    <h1 class="text-center mt-16 mb-5">Sobre Ketanolab</h1>
+    <!-- p quiénes somos -->
+    <p class="text-justify">{{"we.paragraph" | translate}}</p>
+  </div>
+  <!-- Fin container quiénes somos -->
+
+  <!-- Inicio container equipo -->
+  <div class="container">
+  <!-- inicio fila 1 -->
+  <div class="row equipo">
+    <!-- inicio columna 1 de fila 1 -->
+    <div class="col-md-4">
+      <!-- inicio card de Roger. -->
+      <div class="card tarjeta">
+        <img class="card-img" src="../../../assets/img/roger.png"   alt="Roger.">
+        <div class="card-img-overlay">
+          <h5 class="card-title">{{"we.person-1" | translate}}</h5>
+          <p class="card-text"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, inventore. 
+          Tenetur deleniti similique eveniet fugiat exercitationem quas repellat.</p>
+          <a href="https://bo.linkedin.com/in/rogerprado" target="_blank"></a>
+        </div>
+      </div>
     </div>
-    <!-- inicio fila 1 -->
-    <div class="row equipo">
-      <!-- inicio columna 1 de fila 1 -->
-      <div class="col-md-4">
-        <!-- inicio card de Roger. -->
-        <div class="card tarjeta">
-          <img class="card-img" src="../../../assets/img/roger.png"   alt="Roger.">
-          <div class="card-img-overlay">
-            <h5 class="card-title">{{"we.person-1" | translate}}</h5>
-            <p class="card-text"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, inventore. 
-            Tenetur deleniti similique eveniet fugiat exercitationem quas repellat.</p>
-            <a href="https://bo.linkedin.com/in/rogerprado" target="_blank"></a>
-          </div>
+    <!-- inicio columna 2 de fila 1 -->
+    <div class="col-md-4">
+      <!-- inicio card de Pedro. -->
+      <div class="card tarjeta">
+        <img class="card-img" src="../../../assets/img/pedro.png"  alt="Pedro.">
+        <div class="card-img-overlay">
+          <h5 class="card-title">{{"we.person-2" | translate}}</h5>
+          <p class="card-text"> {{"we.person-2_description" | translate}} </p>
+          <a href="https://uy.linkedin.com/in/gezn" target="_blank" ></a>
         </div>
       </div>
-      <!-- inicio columna 2 de fila 1 -->
-      <div class="col-md-4">
-        <!-- inicio card de Pedro. -->
-        <div class="card tarjeta">
-          <img class="card-img" src="../../../assets/img/pedro.png"  alt="Pedro.">
-          <div class="card-img-overlay">
-            <h5 class="card-title">{{"we.person-2" | translate}}</h5>
-            <p class="card-text"> {{"we.person-2_description" | translate}} </p>
-            <a href="https://uy.linkedin.com/in/gezn" target="_blank" ></a>
+    </div>
+    <!-- inicio columna 3 de fila 1 -->
+    <div class="col-md-4">
+      <!-- inicio card de Milenka. -->
+        <div  class="card tarjeta">
+          <img class="card-img" src="../../../assets/img/mile.jpg" alt="Milenka.">
+          <div class="card-img-overlay"> 
+            <h5 class="card-title">{{"we.person-3" | translate}}</h5>
+            <p class="card-text-milenka"> {{"we.person-3_description" | translate}} </p>
+            <a href="https://uy.linkedin.com/in/milenka-e-pereira-648a0942/" target="_blank" ></a>
           </div>
         </div>
-      </div>
-      <!-- inicio columna 3 de fila 1 -->
-      <div class="col-md-4">
-        <!-- inicio card de Milenka. -->
-          <div  class="card tarjeta">
-            <img class="card-img" src="../../../assets/img/mile.jpg" alt="Milenka.">
-            <div class="card-img-overlay"> 
-              <h5 class="card-title">{{"we.person-3" | translate}}</h5>
-              <p class="card-text-milenka"> {{"we.person-3_description" | translate}} </p>
-              <a href="https://uy.linkedin.com/in/milenka-e-pereira-648a0942/" target="_blank" ></a>
-            </div>
-          </div>
-      </div>
     </div>
   </div>
-  <!-- Inicio fila 2 -->
-    <div class="row equipo mt-16 justify-content-center">
-      <!-- inicio columna 1 de fila 2 -->
-      <div class="col-md-4">
-        <!-- inicio card de Samantha. -->
-        <div class="card tarjeta">
-          <img class="card-img" src="../../../assets/img/samantha.jpg"   alt="Samantha.">
-          <div class="card-img-overlay">
-            <h5 class="card-title">{{"we.person-4" | translate}}</h5>
-            <p class="card-text"> {{"we.person-4_description" | translate}}</p>
-            <a href="#" target="_blank"></a>
-          </div>
-        </div>
-      </div>
-      <!-- inicio columna 2 de fila 2 -->
-      <div class="col-md-4">
-        <!-- inicio card de Pedro. -->
-        <div class="card tarjeta">
-          <img class="card-img" src="../../../assets/img/melania.jpg"  alt="Melania.">
-          <div class="card-img-overlay">
-            <h5 class="card-title">{{"we.person-5" | translate}}</h5>
-            <p class="card-text"> {{"we.person-5_description" | translate}} </p>
-            <a href="https://uy.linkedin.com/in/gezn" target="_blank" ></a>
-          </div>
+</div>
+<!-- Inicio fila 2 -->
+  <div class="row equipo mt-16 justify-content-center">
+    <!-- inicio columna 1 de fila 2 -->
+    <div class="col-md-4">
+      <!-- inicio card de Samantha. -->
+      <div class="card tarjeta">
+        <img class="card-img" src="../../../assets/img/samantha.png"   alt="Samantha.">
+        <div class="card-img-overlay">
+          <h5 class="card-title">{{"we.person-4" | translate}}</h5>
+          <p class="card-text"> {{"we.person-4_description" | translate}}</p>
+          <a href="#" target="_blank"></a>
         </div>
       </div>
     </div>
-</div>
-
+    <!-- inicio columna 2 de fila 2 -->
+    <div class="col-md-4">
+      <!-- inicio card de Melania. -->
+      <div class="card tarjeta mb-16">
+        <img class="card-img" src="../../../assets/img/melania.png"  alt="Melania.">
+        <div class="card-img-overlay">
+          <h5 class="card-title">{{"we.person-5" | translate}}</h5>
+          <p class="card-text-chacon"> {{"we.person-5_description" | translate}} </p>
+          <a href="https://uy.linkedin.com/in/gezn" target="_blank" ></a>
+        </div>
+      </div>
+    </div>
+    </div> 
 <app-footer></app-footer>
+</div>
